# services/go/data-service/internal/model/model.go
@@ -23,6 +23,8 @@ type RouteStationListResponse = dsmodel.RouteStationListResponse
 type OperatingDatesResponse = dsmodel.OperatingDatesResponse
 type RouteConnection = dsmodel.RouteConnection
 type RouteDetail = dsmodel.RouteDetail
+type MapRoute = dsmodel.MapRoute
+type MapRouteListResponse = dsmodel.MapRouteListResponse
 
 // Operations
 type OperationSummary = dsmodel.OperationSummary
